--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,8 +2,8 @@ name: CI - SonarCloud, Tests, NuGet y Release
 
 env:
   DOTNET_VERSION: '9.x'
-  SONAR_ORG: 'dennisdhm7'
-  SONAR_PROJECT: 'dennisdhm7_apibank'
+  SONAR_ORG: 'gilmermc25'
+  SONAR_PROJECT: 'gilmermc25_apibank'
   PACKAGE_VERSION: '1.0.0'
   NUGET_SOURCE_NAME: 'github'
   NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/UPT-FAING-EPIS/index.json'
